# mcp-latex-docs

./: DESIGN.md  README.md  TODO.md  pyproject.toml  smoke_test.py
src/mcp_latex_docs/: embedder.py  parser.py  server.py  store.py
tests/: test_embedder.py  test_parser.py  test_server.py  test_store.py
tests/fixtures/: sample.tex
